syntax = "proto3";

option java_package = "pt.up.fe.sdle2023.db.model";
option java_outer_classname = "ModelProtos";

message Token {
  uint64 mostSignificantBits = 1;
  uint64 leastSignificantBits = 2;
}

message Settings {
  Token storageToken = 1;
}

message VectorClock {
  message Entry {
    Token nodeToken = 1;
    uint64 counter = 2;
  }

  repeated Entry entries = 1;
}

message StoredData {
  message Version {
    VectorClock vectorClock = 1;
    bytes data = 2;
  }

  repeated Version versions = 1;
}
